# mcp-server

./: .continuerules  .gitignore  .pylintrc  README.md  mcp_server.py  mcp_server_low.py  musiciandb.session.sql  pyproject.toml
.github/: copilot-instructions.md
.kilocode/: mcp.json
.kilocode/rules/: 01-project.md  02-github.md
.kilocode/rules/rules-database/: 09-database.md
.roo/rules/: 01-project.md
doc/: db-definition.sql  db-schema.sql
tests/: test_mcp.py  test_mcp_low.py  test_page.html
utils/: args.py  db.py  helpers.py  mcp.py  mcp_helpers.py  web.py
