[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "asyncpg>=0.28.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
    "pathspec>=0.11.0",
    "packaging>=23.2",
    "aioodbc>=0.4.0",
    "markdownify>=1.1.0",
    "attrs>=25.3.0",
]

[tool.setuptools]
py-modules = ["mcp_server", "mcp_server_low"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
allow-insecure-host = ["github.com", "pypi.org"]